newer versions, adjusting controllers