@@ -5,18 +5,12 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/image")
@@ -31,6 +25,7 @@ public class ImageController {
     public ResponseEntity<ResponseMessage> uploadFile(@RequestParam("imageupload") MultipartFile file) {
         String message = "";
         try {
+
             imageService.save(file);
             message = "Sparat filen " + file.getOriginalFilename();
             return ResponseEntity.status(HttpStatus.OK).body(new ResponseMessage(message));
@@ -42,7 +37,7 @@ public class ImageController {
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<byte[]> getFile(@PathVariable String id) {
+    public ResponseEntity<byte[]> getFile(@PathVariable("id") String id) {
         MenuImage image = imageService.getImageById(id);
 
         return ResponseEntity.ok()
@@ -60,19 +55,19 @@ public class ImageController {
 
             return new ImageFileMetaData(image.getName(), fileDownloadUri, image.getType(),
                     image.getImageData().length);
-        }).collect(Collectors.toList());
+        }).toList();
 
         return ResponseEntity.status(HttpStatus.OK).body(images);
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<ResponseMessage> deleteImage (@PathVariable String id){
+    public ResponseEntity<ResponseMessage> deleteImage (@PathVariable("id") String id){
         imageService.delete(id);
         return ResponseEntity.status(HttpStatus.OK).body(new ResponseMessage("Bild borttagen"));
     }
 
     @GetMapping("/rotate/{id}")
-    public ResponseEntity<String> rotateImage (@PathVariable String id) throws IOException {
+    public ResponseEntity<String> rotateImage (@PathVariable("id") String id) throws IOException {
         String imageId = Encode.forJava(id);
         MenuImage image = imageService.getImageById(imageId);
         MenuImage rotatedImage = imageService.rotate(image);
